# django_databse_column_comment

./: .gitignore  README.md  pyproject.toml  setup.py
addcomments/management/commands/: addcolumncomments.py  addcomments.py
django_er/management/: er_js.py
django_er/management/commands/: addcomments.py  er.py
